--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta property="og:title" content="   تمويل امكان   " />
 <meta property="og:description" content="    طلب التمويل المباشر الموافقة خلال 30 دقيقة     " />
 <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIV73xqDNY0G_F2cCE0y8rePdp8tHjH2i18w&s" />
-<meta property="og:url" content="https://example.com" />
+<meta property="og:url" content="https://saudiarabia00.github.io/emkan/" />
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="ar_AR" />
 
